glx/testdata/valid/media-photo.glx
media:
  media-12345678:
    version: "1.0"
    uri: "file://photos/john-smith-1880.jpg"
    media_type: photo
    file_path: "photos/john-smith-1880.jpg"
    title: "Portrait of John Smith"
    description: "Studio portrait taken in Leeds, circa 1880"
    date: "1880"
    subjects:
      - person-a1b2c3d4
