glx/testdata/invalid/media-invalid-type.glx
# Invalid: Invalid media_type value
media:
  media-12345678:
    version: "1.0"
    media_type: invalid_type
    file_path: "test.jpg"
    title: "Test photo"
